--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^3.1.0",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.3"
   }
