--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^3.1.0",
+    "fibers": "^5.0.0",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.3"
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0"
   }
 }
