--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fibers": "^5.0.0",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
+    "push-dir": "^0.4.1",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0"
   }
