--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/tailwindcss": "^3.1.0",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
+    "push-dir": "^0.4.1",
     "sass-loader": "^10.0.3"
   }
 }
