--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^3.1.0",
+    "@nuxtjs/tailwindcss": "^3.2.0",
     "fibers": "^5.0.0",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "sass": "^1.29.0",
-    "sass-loader": "^10.1.0"
+    "sass-loader": "^10.1.0",
+    "tailwindcss": "^2.0.1-compat"
   }
 }
